# AutoCarROS2

./: .gitignore  README.md  requirements.sh  requirements.txt  ros-foxy-desktop-full-install.sh
autocar_description/: CMakeLists.txt  package.xml
autocar_description/meshes/: br_1.stl  chassis_link.stl  spoiler.stl
autocar_description/rviz/: view.rviz
autocar_description/urdf/: autocar.xacro
autocar_gazebo/: CMakeLists.txt  package.xml
autocar_gazebo/models/autocar/: model.config  model.sdf
autocar_gazebo/models/autocar/meshes/: bl_1.stl  fl_1.stl
autocar_gazebo/worlds/: autocar.world  autocar_city.world  autocar_spawn.world
autocar_map/: CMakeLists.txt  package.xml
autocar_map/include/: gridmap.h
autocar_map/src/: bof.cpp
autocar_msgs/: CMakeLists.txt  package.xml
autocar_msgs/msg/: Path2D.msg
autocar_nav/: CMakeLists.txt  package.xml
autocar_nav/autocar_nav/: __init__.py  cubic_spline_interpolator.py  heading2quaternion.py  yaw_to_quaternion.py
autocar_nav/nodes/: clickplanner.py  globalplanner.py  localisation.py  localplanner.py  tracker.py
launches/: CMakeLists.txt  package.xml
launches/launch/: click_launch.py  default_launch.py
ngeeann_av_description/: CMakeLists.txt  package.xml
ngeeann_av_description/config/: ackermann_params.yaml  controller.yaml
ngeeann_av_description/launch/: display_launch.py  robot_state_pub_launch.py
ngeeann_av_description/meshes/: fr_1.stl
ngeeann_av_description/rviz/: view.rviz
ngeeann_av_description/urdf/: camera.xacro  hokuyo.xacro  materials.xacro  ngeeann_av.gazebo  ngeeann_av.trans  ngeeann_av.xacro
ngeeann_av_description/worlds/: populated_road.world
ngeeann_av_gazebo/: CMakeLists.txt  package.xml
ngeeann_av_gazebo/config/: controller.yaml  indiv_controller.yaml
ngeeann_av_gazebo/launch/: empty_launch.py  launch1.py  launch2.py  launch3.py  test_launch.py
ngeeann_av_gazebo/models/ngeeann_av/: model.config  model.sdf
ngeeann_av_gazebo/nodes/: ackermann_controller.py  spawn.py
ngeeann_av_gazebo/worlds/: city.world  empty.world  ngeeann_av.world  ngeeann_av_city.world  ngeeann_av_spawn.world  road.world
ngeeann_av_map/: CMakeLists.txt  package.xml
ngeeann_av_map/include/: gridmap.h
ngeeann_av_map/src/: bof.cpp  old.cpp  publisher_member_function.cpp
ngeeann_av_msgs/: CMakeLists.txt  package.xml
ngeeann_av_msgs/msg/: AckermannDrive.msg  AckermannDriveStamped.msg  State2D.msg  Twist2D.msg
ngeeann_av_nav/: CMakeLists.txt  package.xml  setup.py
ngeeann_av_nav/config/: navigation_params.yaml
ngeeann_av_nav/data/: waypoints.csv
ngeeann_av_nav/launch/: av_launch.py
ngeeann_av_nav/ngeeann_av_nav/: normalise_angle.py
ngeeann_av_nav/nodes/: bof.py  clickplanner.py  command_goals.py  globalplanner.py  localisation.py  localplanner.cpp  localplanner.py  tracker.py
ngeeann_av_nav/scripts/: barrier_placement.py  circle_road_gen.py  circle_wp_gen.py  roadmap_gen.py
ngeeann_av_nav/src/utils/: cubic_spline_planner.py  normalise_angle.py  spline_planner.py
